--- a/2025-06-19/package.json
+++ b/2025-06-19/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dilemme-code-legacy",
+  "name": "2025-06-19",
   "type": "module",
   "private": true,
   "scripts": {
@@ -8,16 +8,10 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@iconify-json/uil": "^1.2.3",
     "@slidev/cli": "^51.8.2",
-    "@slidev/theme-apple-basic": "^0.25.1",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
-    "slidev-theme-aneo": "^0.6.1",
-    "slidev-theme-excali-slide": "^1.3.0",
+    "slidev-addon-graph": "^0.1.1",
     "vue": "^3.5.16"
-  },
-  "devDependencies": {
-    "slidev-addon-graph": "^0.1.1"
   }
 }
